# Hackathon_Trust_bridge

./: .gitignore  PITCH_DECK.md  README.md
.amazonq/rules/: DEV2026.md
.cursor/: Untitled
backend/: .env.example  .gitignore  =0.4.27  Untitled  alembic.ini  init_db.py  requirements.txt  routes.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/cv/: __init__.py  ats_optimizer.py  cv_generator.py  global_job_api.py  job_aggregator.py  job_matcher.py
backend/investments/: __init__.py  investor_portfolio.py  startup_verification.py  usdc_transactions.py
backend/mock_data/: investments.json  jobs.json  startups.json
backend/scripts/: airdrop_to_founders.sh  cleanup_mock_investments.py  seed_database.py  seed_jobs.py
backend/tests/: conftest.py
backend/trust/: pyvenv.cfg
blockchain/: .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json
blockchain/programs/investment-ledger/: Cargo.toml
blockchain/programs/investment-ledger/src/: lib.rs
blockchain/programs/startup-registry/: Cargo.toml
blockchain/programs/startup-registry/src/: lib.rs
blockchain/scripts/: addEmployee.js  fix-idl.js  investUSDC.js  registerStartup.js  setup-env.sh
blockchain/tests/: investment.test.js  startup.test.js
docs/: API_SPEC.md  ARCHITECTURE.md
frontend/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/components/: BackButton.jsx  JobList.jsx  Layout.jsx  Logo.jsx  PasswordInput.jsx  PrivyWrapper.jsx  StartupCard.jsx
frontend/contexts/: AuthContext.jsx  PrivyAuthContext.jsx
(+63 files in other folders)
