[package]
name = "investment-ledger"
version = "0.1.0"
description = "TrustBridge SL Investment Ledger Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "investment_ledger"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
startup-registry = { path = "../startup-registry", features = ["cpi"] }

